# python-learninig-projects

city-guesser-crewai/: README.md  pyproject.toml
city-guesser-crewai/src/city_guesser/: __init__.py  main.py  main1.py  main3.py
data sweeper/: requiremts.txt
data_sweeper/: app.py
growth_mindset/: requiremts.txt
lg/: pyproject.toml
lg/src/lg/: simpleflow.py
project-04/: python_mongodb.py
project_01/: youtube.txt  youtube_manager.py
project_02/: youtube_manager_db.py  youtube_videos.db
project_03/: api_handling.py
