[project]
name = "lg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ZOHAIB7689", email = "bzohaib754@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain-google-genai>=2.0.9",
    "langgraph>=0.2.74",
    "python-dotenv>=1.0.1",
]

[project.scripts]
lg = "lg:main"
flow = "lg:simpleflow:run_chain"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
